// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicList exposes correct API 1`] = `
<div>
  <ul>
    <li>
      Some Title
      <button>
        Remove Item Some Title
      </button>
    </li>
    <li>
      One More Title
      <button>
        Remove Item One More Title
      </button>
    </li>
  </ul>
  <button>
    Add Item
  </button>
  <button>
    Add Item Without Callback
  </button>
  <button>
    Set new items
  </button>
</div>
`;

exports[`DynamicList exposes correct API 2`] = `
<div>
  <ul>
    <li>
      Some Title
      <button>
        Remove Item Some Title
      </button>
    </li>
    <li>
      One More Title
      <button>
        Remove Item One More Title
      </button>
    </li>
    <li>
      And One More Item
      <button>
        Remove Item And One More Item
      </button>
    </li>
  </ul>
  <button>
    Add Item
  </button>
  <button>
    Add Item Without Callback
  </button>
  <button>
    Set new items
  </button>
</div>
`;

exports[`DynamicList exposes correct API 3`] = `
<div>
  <ul>
    <li>
      One More Title
      <button>
        Remove Item One More Title
      </button>
    </li>
    <li>
      And One More Item
      <button>
        Remove Item And One More Item
      </button>
    </li>
  </ul>
  <button>
    Add Item
  </button>
  <button>
    Add Item Without Callback
  </button>
  <button>
    Set new items
  </button>
</div>
`;

exports[`DynamicList exposes correct API 4`] = `
<div>
  <ul>
    <li>
      New Some Title
      <button>
        Remove Item New Some Title
      </button>
    </li>
    <li>
      New One More Title
      <button>
        Remove Item New One More Title
      </button>
    </li>
  </ul>
  <button>
    Add Item
  </button>
  <button>
    Add Item Without Callback
  </button>
  <button>
    Set new items
  </button>
</div>
`;
